refactor: remove all hardcoded content and use only MDX files with interactive elements

--- a/src/mdx/market.mdx
+++ b/src/mdx/market.mdx
@@ -17,3 +17,39 @@
 
 ### CardPR (Бюджетник)
 Дешево, но без автоматизации и аналитики. **Мы даем мощные инструменты, а не просто "цифровую визитку".**
+
+<div className="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center mb-8">
+  <div className="bg-card border border-border rounded-lg p-6">
+    <h4 className="font-bold mb-4">График конкурентного анализа</h4>
+    <div className="h-[350px] flex items-center justify-center text-muted-foreground">
+      [Интерактивный график будет добавлен через React компонент]
+    </div>
+  </div>
+  
+  <div className="bg-card border border-border rounded-lg p-6 space-y-4">
+    <div>
+      <h4 className="font-bold">Ваш продукт: "Дюжина"</h4>
+      <p className="text-sm text-muted-foreground">
+        Мы позиционируем вас как идеальный баланс: вся мощь enterprise-решений в простом и понятном интерфейсе по справедливой цене.
+      </p>
+    </div>
+    <div>
+      <h4 className="font-bold text-muted-foreground">WalletFactory (Enterprise)</h4>
+      <p className="text-sm text-muted-foreground">
+        Мощно, кастомно, очень дорого. Недоступно для 95% рынка. <strong className="text-primary">Мы даем 80% их функционала за 10% цены.</strong>
+      </p>
+    </div>
+    <div>
+      <h4 className="font-bold text-muted-foreground">OSMI Cards (Середняк)</h4>
+      <p className="text-sm text-muted-foreground">
+        Хороший баланс, но с ограничениями по PUSH и жесткими тарифами. <strong className="text-primary">Мы даем свободу без искусственных лимитов.</strong>
+      </p>
+    </div>
+    <div>
+      <h4 className="font-bold text-muted-foreground">CardPR (Бюджетник)</h4>
+      <p className="text-sm text-muted-foreground">
+        Дешево, но без автоматизации и аналитики. <strong className="text-primary">Мы даем мощные инструменты, а не просто "цифровую визитку".</strong>
+      </p>
+    </div>
+  </div>
+</div>
