feat: implement frontmatter system for MDX files with dynamic metadata

--- a/src/mdx/intro.mdx
+++ b/src/mdx/intro.mdx
@@ -1,6 +1,12 @@
+---
+title: "Главная идея"
+icon: "Lightbulb"
+nextButtonText: "К анализу рынка"
+---
+
 # Главная идея
 
-Вы строите не программу лояльности! **Вы становитесь владельцем цифрового актива.**
+Вы строите не программу лояльности. **Вы становитесь владельцем цифрового актива.**
 
 Ваша цель — не разовый проект, а масштабируемый бизнес, приносящий стабильный доход. Наша задача — дать вам для этого технологический фундамент "под ключ", который позволит продавать мощную систему лояльности сотням компаний: от ресторанов и фитнес-залов до онлайн-курсов.
 
