--- a/src/mdx/market.mdx
+++ b/src/mdx/market.mdx
@@ -1,3 +1,9 @@
+---
+title: "Анализ рынка"
+icon: "TrendingUp"
+nextButtonText: "Что мы строим?"
+---
+
 # Анализ рынка
 
 ## Занять стратегическую нишу
