--- a/src/mdx/next.mdx
+++ b/src/mdx/next.mdx
@@ -1,3 +1,9 @@
+---
+title: "Следующие шаги"
+icon: "Rocket"
+nextButtonText: "Начать сначала"
+---
+
 # Следующие шаги
 
 ## От идеи к первому камню
