--- a/src/mdx/offer.mdx
+++ b/src/mdx/offer.mdx
@@ -1,3 +1,9 @@
+---
+title: "Ваши инвестиции"
+icon: "Gem"
+nextButtonText: "Почему мы?"
+---
+
 # Ваши инвестиции
 
 ## Инвестиции в ваш цифровой актив
