--- a/src/mdx/product.mdx
+++ b/src/mdx/product.mdx
@@ -1,3 +1,9 @@
+---
+title: "Концепция продукта"
+icon: "Package"
+nextButtonText: "На чем мы это строим?"
+---
+
 # Концепция продукта
 
 ## Что именно мы строим: Функциональное ядро
