--- a/src/mdx/roadmap.mdx
+++ b/src/mdx/roadmap.mdx
@@ -1,3 +1,9 @@
+---
+title: "Этапы и сроки"
+icon: "Map"
+nextButtonText: "Перейти к инвестициям"
+---
+
 # Этапы и сроки
 
 ## Дорожная карта: от идеи до прибыли
