--- a/src/mdx/team.mdx
+++ b/src/mdx/team.mdx
@@ -1,3 +1,9 @@
+---
+title: "Наша экспертиза"
+icon: "ShieldCheck"
+nextButtonText: "Начать работу"
+---
+
 # Наша экспертиза
 
 ## Больше, чем разработчики: Ваша продуктовая команда
