--- a/src/mdx/tech.mdx
+++ b/src/mdx/tech.mdx
@@ -1,3 +1,9 @@
+---
+title: "Технологический стек"
+icon: "Cpu"
+nextButtonText: "Посмотреть план работ"
+---
+
 # Технологический стек
 
 ## Технологии: Фундамент для роста
