Fix mindmap section background colors with improved styling
- Simplified CSS selectors for better browser compatibility
- Enhanced JavaScript styling logic with better element detection
- Added section-specific background colors:
  * Frontend: Light blue (#eff6ff) with blue border (#2563eb)
  * Backend: Light red (#fef2f2) with red border (#dc2626)
  * Integrations: Light green (#f0fdf4) with green border (#16a34a)
  * DevOps: Light yellow (#fffbeb) with yellow border (#ca8a04)
- Increased timeout to 200ms for reliable rendering
- Added console logging for debugging
- Updated both mdx-renderer-new.tsx and mermaid-diagram.tsx

--- a/content/2.mdx
+++ b/content/2.mdx
@@ -20,17 +20,17 @@ nextButtonText: "К пользовательским сценариям"
 ##### **Диаграмма компонентов (C5 - Level 2)**
 ```mermaid
 graph TD
-    subgraph "Пользовательские интерфейсы"
-        A['Клиентский портал']
-        B['Панель Администратора']
+    subgraph "Юзер-интерфейсы"
+        A["Клиентский портал"]
+        B["Панель Администратора"]
     end
 
     subgraph "Бэкенд-система"
-        C['Ядро API (Payload CMS)']
-        D['AI Service']
-        E['Outreach Service']
-        F['Parser Service']
-        G['Notification Service']
+        C["Ядро API (Payload CMS)"]
+        D["AI Service"]
+        E["Outreach Service"]
+        F["Parser Service"]
+        G["Notification Service"]
     end
 
     A -- REST/GraphQL --> C
@@ -62,23 +62,23 @@ graph TD
 ##### **Карта ролей и их ключевых прав**
 ```mermaid
 graph TD
-    Root['Роли пользователей']
+    Root["Роли пользователей"]
     
-    Root --> Client['Клиент']
-    Root --> Admin['Администратор']
-    Root --> Partner['Партнер (Тенант)']
+    Root --> Client["Клиент"]
+    Root --> Admin["Администратор"]
+    Root --> Partner["Партнер (Тенант)"]
     
-    Client --> C1['Создание/оплата Проекта']
-    Client --> C2['Просмотр статуса']
-    Client --> C3['Получение результатов']
+    Client --> C1["Создание/оплата Проекта"]
+    Client --> C2["Просмотр статуса"]
+    Client --> C3["Получение результатов"]
     
-    Admin --> A1['Полное управление системой (CRUD)']
-    Admin --> A2['Просмотр глобальной аналитики']
-    Admin --> A3['Управление Партнерами']
+    Admin --> A1["Полное управление системой (CRUD)"]
+    Admin --> A2["Просмотр глобальной аналитики"]
+    Admin --> A3["Управление Партнерами"]
     
-    Partner --> P1['Управление своими Клиентами']
-    Partner --> P2['Просмотр своей аналитики']
-    Partner --> P3['Изолированный доступ']
+    Partner --> P1["Управление своими Клиентами"]
+    Partner --> P2["Просмотр своей аналитики"]
+    Partner --> P3["Изолированный доступ"]
 ```
 
 #### **2.3. Функциональные возможности по модулям**
