--- a/content/3.mdx
+++ b/content/3.mdx
@@ -21,17 +21,17 @@ nextButtonText: "К техническим требованиям"
 ```mermaid
 flowchart TD
     subgraph "Путь Клиента"
-        A(Клиент на сайте) --> B[Выбирает тариф];
-        B --> C[Заполняет квиз-форму];
-        C --> D[Переходит к оплате];
+        A[Клиент на сайте] --> B[Выбирает тариф]
+        B --> C[Заполняет квиз-форму]
+        C --> D[Переходит к оплате]
     end
     
     subgraph "Системные процессы"
-        D --> E{Оплата успешна?};
-        E -- Да --> F[Проект создан в системе<br>статус: "Оплачен"];
-        F --> G((Уведомление<br>администратору));
-        E -- Нет --> H[Ошибка оплаты<br>Возврат к форме];
-        H --> D;
+        D --> E{Оплата успешна?}
+        E -->|Да| F[Проект создан в системе - Статус: Оплачен]
+        F --> G[Уведомление администратору]
+        E -->|Нет| H[Ошибка оплаты - Возврат к форме]
+        H --> D
     end
 ```
 
@@ -81,9 +81,9 @@ sequenceDiagram
 ```mermaid
 flowchart TD
     A{Счетчик ответов<br>достиг цели?}
-    A -- Нет --> E(Продолжение работы кампании);
+    A -- Нет --> E[Продолжение работы кампании];
     A -- Да --> B[Команда на остановку рассылок];
-    B --> C[Статус Проекта обновлен на "Завершен"];
+    B --> C[Статус Проекта обновлен на Завершен];
     C --> D[Финальный отчет отправлен клиенту];
-    D --> F((Кампания успешно завершена));
+    D --> F[Кампания успешно завершена];
 ```
