Refactor MDX content rendering with improved list processing

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -5,9 +5,9 @@ prevButtonText: ""
 nextButtonText: "К функциональным требованиям"
 ---
 
-### **1. Общая информация**
+### 1. Общая информация
 
-#### **1.1. Цели и задачи проекта**
+#### 1.1. Цели и задачи проекта
 
 *   **Бизнес-цель:** Создать технологическую платформу для продукта Influbalance, которая позволит:
     1.  Снизить операционные расходы (OPEX) за счет отказа от сторонних сервисов (Instantly.ai).
@@ -49,7 +49,7 @@ graph TD
     Services -- "4. Выполняют и возвращают результат в" --> Core
 ```
 
-#### **1.2. Используемые методологии**
+#### 1.2. Используемые методологии
 
 *   **Проектирование архитектуры:** Модель C5 (Context, Component, Chunks, Crumbs, Core) будет использоваться для визуализации и документирования архитектуры на разных уровнях абстракции. Диаграммы будут создаваться с использованием Mermaid для реализации подхода Architecture-as-Code.
 *   **Разработка интерфейса:** Методология Atomic Design для создания консистентной и переиспользуемой библиотеки UI-компонентов.
@@ -72,7 +72,7 @@ graph TD
     E --> A
 ```
 
-#### **1.3. Глоссарий**
+#### 1.3. Глоссарий
 
 *   **Клиент:** Конечный заказчик, который покупает услугу (бренд, стартап).
 *   **Партнер (Тенант):** Агентство или фрилансер, использующий платформу по модели White-Label.
