--- a/content/2.mdx
+++ b/content/2.mdx
@@ -5,9 +5,9 @@ prevButtonText: "Введение и цели проекта"
 nextButtonText: "К пользовательским сценариям"
 ---
 
-### **2. Функциональные требования**
+### 2. Функциональные требования
 
-#### **2.1. Модули системы**
+#### 2.1. Модули системы
 Система состоит из следующих логических модулей (микросервисов и приложений), которые взаимодействуют через API:
 1.  **Клиентский портал (Frontend):** Веб-приложение на Next.js для взаимодействия с клиентами.
 2.  **Панель Администратора (Admin Panel):** Интерфейс на базе Payload CMS для управления всеми аспектами системы.
@@ -17,7 +17,7 @@ nextButtonText: "К пользовательским сценариям"
 6.  **Сервис парсинга (Parser Service):** Микросервис для сбора и обновления базы инфлюенсеров.
 7.  **Сервис уведомлений (Notification Service):** Микросервис для отправки real-time уведомлений в мессенджеры.
 
-##### **Диаграмма компонентов (C5 - Level 2)**
+##### Диаграмма компонентов (C5 - Level 2)
 ```mermaid
 graph TD
     subgraph "Юзер-интерфейсы"
@@ -41,25 +41,28 @@ graph TD
     C -- "Оркестрация" --> G
 ```
 
-#### **2.2. Роли пользователей**
-*   **Клиент:**
-    *   Просмотр главной страницы, кейсов, тарифов.
-    *   Регистрация и аутентификация.
-    *   Создание и оплата Проекта через квиз-форму.
-    *   Просмотр статуса своего Проекта в личном кабинете.
-    *   Получение уведомлений о позитивных ответах.
-*   **Администратор (Команда Антона):**
-    *   Полный CRUD-доступ ко всем сущностям: Клиенты, Проекты, Инфлюенсеры, Кампании.
-    *   Просмотр системной аналитики и дашбордов.
-    *   Ручной запуск/остановка Кампаний.
-    *   Управление базой шаблонов для AI-генерации.
-    *   Управление Тенантами (партнерами).
-*   **Партнер (Тенант):**
-    *   Доступ к кастомизированной (White-Label) версии Панели Администратора.
-    *   Управляет только своими Клиентами и Проектами.
-    *   Просматривает аналитику только в рамках своего тенанта.
+#### 2.2. Роли пользователей
 
-##### **Карта ролей и их ключевых прав**
+* **Клиент:**
+  * Просмотр главной страницы, кейсов, тарифов.
+  * Регистрация и аутентификация.
+  * Создание и оплата Проекта через квиз-форму.
+  * Просмотр статуса своего Проекта в личном кабинете.
+  * Получение уведомлений о позитивных ответах.
+
+* **Администратор (Команда Антона):**
+  * Полный CRUD-доступ ко всем сущностям: Клиенты, Проекты, Инфлюенсеры, Кампании.
+  * Просмотр системной аналитики и дашбордов.
+  * Ручной запуск/остановка Кампаний.
+  * Управление базой шаблонов для AI-генерации.
+  * Управление Тенантами (партнерами).
+
+* **Партнер (Тенант):**
+  * Доступ к кастомизированной (White-Label) версии Панели Администратора.
+  * Управляет только своими Клиентами и Проектами.
+  * Просматривает аналитику только в рамках своего тенанта.
+
+##### Карта ролей и их ключевых прав
 ```mermaid
 graph TD
     Root["Роли пользователей"]
@@ -81,7 +84,7 @@ graph TD
     Partner --> P3["Изолированный доступ"]
 ```
 
-#### **2.3. Функциональные возможности по модулям**
+#### 2.3. Функциональные возможности по модулям
 
 **2.3.1. Клиентский портал**
 *   **Онбординг:** Многошаговый квиз для сбора данных о Проекте.
@@ -110,7 +113,7 @@ graph TD
 *   Отправка уведомлений клиенту и администратору при получении позитивного ответа.
 *   Отправка сводных отчетов о статусе кампании.
 
-##### **Последовательность обработки нового проекта (Sequence Diagram)**
+##### Последовательность обработки нового проекта (Sequence Diagram)
 ```mermaid
 sequenceDiagram
     participant Client as Клиент
