--- a/content/4.mdx
+++ b/content/4.mdx
@@ -5,11 +5,11 @@ prevButtonText: "К пользовательским сценариям"
 nextButtonText: "К программным интерфейсам (API)"
 ---
 
-### **4. Технические требования**
+### 4. Технические требования
 
 Этот раздел определяет технологический стек, архитектурные принципы и нефункциональные требования, которые обеспечат производительность, масштабируемость и безопасность платформы.
 
-#### **4.1. Технологический стек**
+#### 4.1. Технологический стек
 Выбранный стек оптимизирован для скорости разработки (DX), производительности (Performance) и типизированной безопасности (Type Safety).
 
 *   **Frontend:** Next.js, TypeScript, Tailwind CSS, Shadcn/ui, Zustand.
@@ -23,31 +23,31 @@ nextButtonText: "К программным интерфейсам (API)"
 ```mermaid
 mindmap
   root((Технологический стек Influbalance))
-    Frontend
+    1. Frontend
       ::icon(fa fa-desktop)
-      Framework - Next.js
-      Language - TypeScript
-      Styling - Tailwind CSS
-      Components - Shadcn/ui
-    Backend
+      1.1. Framework - Next.js
+      1.2. Language - TypeScript
+      1.3. Styling - Tailwind CSS
+      1.4. Components - Shadcn/ui
+    2. Backend
       ::icon(fa fa-server)
-      Core - Payload CMS
-      Mocroservice - Bun / ElysiaJS
-      Database - PostgreSQL + pgvector
-    Интеграции
+      2.1. Core - Payload CMS
+      2.2. Mocroservice - Bun / ElysiaJS
+      2.3. Database - PostgreSQL + pgvector
+    3. Интеграции
       ::icon(fa fa-plug)
-      Stripe - Stripe API
-      OpenAI - OpenAI API
-      Google/MS - OAuth, SMTP/IMAP
-      Telegram - Telegram Bot API
-    DevOps & Tooling
+      3.1. Stripe - Stripe API
+      3.2. OpenAI - OpenAI API
+      3.3. Google/MS - OAuth, SMTP/IMAP
+      3.4. Telegram - Telegram Bot API
+    4. DevOps & Tooling
       ::icon(fa fa-tools)
-      Docker - Docker
-      GitHub Actions
-      Vercel / Kubernetes
+      4.1. Docker - Docker
+      4.2. GitHub Actions
+      4.3. Vercel / Kubernetes
 ```
 
-#### **4.2. Архитектура**
+#### 4.2. Архитектура
 
 *   **Микросервисная архитектура:** Каждый ключевой бизнес-процесс (рассылка, AI-генерация, парсинг) вынесен в отдельный, независимый сервис. Это обеспечивает отказоустойчивость (падение одного сервиса не затронет остальные) и возможность независимого масштабирования.
 *   **Мульти-тенантность (для White-Label):** Архитектура изначально проектируется с разделением данных по `tenant_id`. Все запросы к API и базе данных строго изолированы в рамках одного партнера, что является ключевым требованием для White-Label.
@@ -82,20 +82,20 @@ graph TD
     Core -- "CRUD" --> DB
 ```
 
-#### **4.3. Требования к производительности (нефункциональные)**
+#### 4.3. Требования к производительности (нефункциональные)
 
 *   **Время ответа API:** < 200 мс для 95% запросов (за исключением тяжелых AI-операций).
 *   **Время загрузки клиентского портала (FCP - First Contentful Paint):** < 1.5 секунды.
 *   **Масштабируемость:** Система должна быть способна обрабатывать до 100 одновременно запущенных кампаний, отправляя до 50 000 уникальных писем в сутки, с возможностью горизонтального масштабирования сервисов.
 
-#### **4.4. Требования к безопасности**
+#### 4.4. Требования к безопасности
 
 *   **Аутентификация и Авторизация:** JWT-токены для сессий. RBAC (Role-Based Access Control) на уровне API для разделения прав Клиента, Администратора и Партнера.
 *   **Хранение данных:** Пароли пользователей хэшируются (bcrypt). Все внешние ключи API, токены и другие секреты хранятся в защищенном хранилище (например, Doppler, Vault или переменные окружения).
 *   **Изоляция данных:** Жесткая фильтрация всех запросов к БД по `tenant_id` на уровне репозиториев данных, чтобы исключить любую возможность утечки данных между партнерами.
 *   **Защита от веб-уязвимостей:** Валидация всех входящих данных на уровне API с помощью Zod для предотвращения инъекций. Применение стандартных практик защиты от XSS, CSRF.
 
-#### **4.5. Инфраструктура и DevOps**
+#### 4.5. Инфраструктура и DevOps
 
 *   **Хостинг:** Vercel для Frontend, кластер Kubernetes (GKE, EKS) или managed-сервисы (DigitalOcean Apps, Railway) для бэкенд-сервисов и БД.
 *   **CI/CD:** Автоматизированные пайплайны на GitHub Actions для каждого пуша в основные ветки. Пайплайн включает: линтинг, запуск тестов, сборку Docker-образов и автоматический деплой на staging-окружение. Деплой на production - по ручному триггеру.
