--- a/content/5.mdx
+++ b/content/5.mdx
@@ -5,10 +5,10 @@ prevButtonText: "К техническим требованиям"
 nextButtonText: "К процедуре приемки"
 ---
 
-### **5. Программные интерфейсы (API)**
+### 5. Программные интерфейсы (API)
 Этот раздел определяет структуру данных и "контракты" взаимодействия между модулями системы. Он служит основой для разработки и интеграции всех микросервисов.
 
-#### **5.1. Модели данных (C5 - Level 4: Crumbs)**
+#### 5.1. Модели данных (C5 - Level 4: Crumbs)
 Ключевые сущности системы, которые будут представлены в базе данных PostgreSQL и транслироваться через API.
 
 *   `Tenants` (Партнеры): Хранит информацию о White-Label партнерах, включая их настройки брендинга.
@@ -63,7 +63,7 @@ erDiagram
     }
 ```
 
-#### **5.2. Ключевые процессы и API-взаимодействия (C5 - Level 3: Chunks)**
+#### 5.2. Ключевые процессы и API-взаимодействия (C5 - Level 3: Chunks)
 Описание основных API-эндпоинтов, обеспечивающих работу пользовательских сценариев.
 
 **5.2.1. Ядро API (Payload CMS)**
@@ -97,7 +97,7 @@ sequenceDiagram
     Core->>Notify: 6. Триггер на отправку уведомления
 ```
 
-#### **5.3. Принципы проектирования API**
+#### 5.3. Принципы проектирования API
 Все API в системе должны следовать единым правилам для обеспечения консистентности и простоты интеграции.
 *   **Стиль:** RESTful.
 *   **Формат данных:** JSON (camelCase для ключей).
