--- a/content/6.mdx
+++ b/content/6.mdx
@@ -5,10 +5,10 @@ prevButtonText: "К программным интерфейсам (API)"
 nextButtonText: "К заключению и материалам"
 ---
 
-### **6. Процедура приемки**
+### 6. Процедура приемки
 Этот раздел определяет критерии и методы тестирования, которые будут использоваться для верификации соответствия разработанной платформы всем функциональным и нефункциональным требованиям, изложенным в данном документе.
 
-#### **Общий процесс приемки**
+#### Общий процесс приемки
 Приемка осуществляется поэтапно. Каждый этап тестирования должен быть успешно пройден перед переходом к следующему. В случае обнаружения критических дефектов, система возвращается на доработку, после чего цикл тестирования для данного этапа повторяется.
 
 
@@ -27,12 +27,12 @@ graph TD
     G --> A;
 ```
 
-#### **6.1. Функциональное тестирование**
+#### 6.1. Функциональное тестирование
 **Цель:** Убедиться, что каждый компонент и система в целом корректно выполняют свою бизнес-логику.
 *   **Модульное тестирование (Unit Tests):** Проверка отдельных функций и компонентов в изоляции. Покрытие кода unit-тестами должно составлять не менее 70% для критически важной бизнес-логики (например, классификатор ответов, логика подсчета лимитов).
 *   **Интеграционное тестирование:** Проверка взаимодействия между микросервисами. Например, тест, который эмулирует создание Проекта в Ядре API и проверяет, что корректные вызовы были сделаны к AI Service и Outreach Service.
 
-#### **6.2. Тестирование интерфейса и E2E**
+#### 6.2. Тестирование интерфейса и E2E
 **Цель:** Проверить корректность работы ключевых пользовательских сценариев от начала до конца через графический интерфейс.
 *   **Метод:** Автоматизированные E2E-тесты (с использованием Playwright/Cypress) и ручное тестирование.
 *   **Ключевые сценарии для проверки:**
@@ -41,7 +41,7 @@ graph TD
     3.  Проверка работы панели администратора: создание/редактирование инфлюенсеров, ручной запуск кампании.
     4.  Корректность работы White-Label: проверка, что партнер видит только свои данные и свой брендинг.
 
-#### **6.3. Нагрузочное тестирование**
+#### 6.3. Нагрузочное тестирование
 **Цель:** Убедиться, что система соответствует нефункциональным требованиям к производительности и масштабируемости.
 *   **Метод:** Использование инструментов (k6, JMeter) для эмуляции высокой нагрузки на API.
 *   **Сценарий:**
@@ -50,7 +50,7 @@ graph TD
     3.  Система должна обработать создание 100 проектов и запуск соответствующих кампаний в течение 10 минут.
     4.  Во время теста среднее время ответа API не должно превышать 200 мс (95-й перцентиль).
 
-#### **6.4. Тестирование безопасности (Vulnerability Testing)**
+#### 6.4. Тестирование безопасности (Vulnerability Testing)
 **Цель:** Выявить и устранить базовые уязвимости в системе.
 *   **Метод:** Автоматическое сканирование и ручная проверка.
 *   **Чек-лист:**
