--- a/content/7.mdx
+++ b/content/7.mdx
@@ -5,10 +5,10 @@ prevButtonText: "К процедуре приемки"
 nextButtonText: ""
 ---
 
-### **7. Заключение и План Реализации**
+### 7. Заключение и План Реализации
 Техническое задание — это карта. Но даже у самой лучшей карты должен быть проложен маршрут с указанием первого шага и возможных опасностей на пути. Этот раздел определяет стратегию внедрения и ключевые риски.
 
-#### **7.1. Приоритеты и MVP (Minimum Viable Product)**
+#### 7.1. Приоритеты и MVP (Minimum Viable Product)
 Мы не строим всё и сразу. Наша первая цель — как можно быстрее получить работающий продукт, который решает главную боль Антона: зависимость от `Instantly.ai` и связанные с этим расходы.
 
 **Цель MVP:** Убить `Instantly.ai` и перевести текущую операционку на свои рельсы.
@@ -41,13 +41,13 @@ gantt
     Продвинутая аналитика для клиентов :2026-01-15, 2w
 ```
 
-#### **7.2. Используемые материалы и артефакты**
+#### 7.2. Используемые материалы и артефакты
 Для успешной реализации проекта команда разработки должна получить доступ к следующим материалам:
 *   **Дизайн и Прототипы:** Ссылка на интерактивный прототип в Figma, включающий все состояния UI-компонентов по методологии Atomic Design.
 *   **Доступы к API:** Ключи для Stripe (в тестовом и боевом режимах), OpenAI, Telegram Bot API, Google/Microsoft Workspace для подключения почтовых ящиков.
 *   **Брендбук:** Логотипы, цветовая палитра и шрифты для корректной настройки клиентского портала и White-Label решений.
 
-#### **7.3. Ключевые риски и пути их митигации**
+#### 7.3. Ключевые риски и пути их митигации
 Любой план хорош до первого боя. Мы должны быть готовы к основным угрозам.
 
 *   **Риск 1: "Ад доставляемости" (Deliverability Hell).**
