--- a/content/3.mdx
+++ b/content/3.mdx
@@ -5,13 +5,13 @@ prevButtonText: "2. Функциональные требования"
 nextButtonText: "К техническим требованиям"
 ---
 
-### **3. Пользовательские сценарии (Use Cases)**
+### 3. Пользовательские сценарии (Use Cases)
 Этот раздел описывает ключевые end-to-end процессы, демонстрируя взаимодействие пользователя с системой и внутреннюю логику работы модулей для достижения бизнес-целей.
 
-#### **UC-01: Запуск кампании клиентом**
+#### UC-01: Запуск кампании клиентом
 Этот сценарий описывает путь нового клиента от выбора тарифа до момента, когда его заказ готов к автоматической обработке системой.
 
-1.  **Действия:**
+*   **Действия:**
     1.  Клиент выбирает на сайте тариф, например, "30 Positive Replies".
     2.  Заполняет многошаговый квиз, указывая все параметры кампании (ниша, гео, ЦА, модель сотрудничества и т.д.).
     3.  Переходит к оплате и вносит депозит в размере $240 через интегрированную форму Stripe.
@@ -35,10 +35,10 @@ flowchart TD
     end
 ```
 
-#### **UC-02: Автоматическая работа системы**
+#### UC-02: Автоматическая работа системы
 Сценарий описывает внутренний конвейер обработки активного проекта, от подбора инфлюенсеров до уведомления клиента о первом результате.
 
-1.  **Действия:**
+*   **Действия:**
     1.  Ядро API инициирует задачу для AI Service на подбор инфлюенсеров согласно критериям Проекта.
     2.  AI Service подбирает релевантных инфлюенсеров и генерирует для каждого персонализированную email-цепочку.
     3.  Ядро API передает готовые данные в Outreach Service с командой на запуск кампании.
@@ -68,10 +68,10 @@ sequenceDiagram
     Notify-->>Client: 7. Уведомление в Telegram
 ```
 
-#### **UC-03: Завершение кампании**
+#### UC-03: Завершение кампании
 Сценарий описывает логику автоматического завершения работы, когда поставленная клиентом цель достигнута.
 
-1.  **Действия:**
+*   **Действия:**
     1.  После получения очередного позитивного ответа счетчик в Проекте достигает целевого значения (например, `30 / 30`).
     2.  Ядро API фиксирует достижение цели.
     3.  Система автоматически отдает команду Outreach Service остановить все дальнейшие рассылки, связанные с этим Проектом.
