feat: enhance interactive Mermaid diagrams with zoom and tooltip support
- Add zoom functionality and customizable settings for Mermaid diagrams in MDX content
- Implement tooltip display for diagrams with user-defined text
- Update CSS for improved diagram styling and responsiveness
- Refactor MDXRenderer to handle individual diagram settings and rendering logic
- Introduce new InteractiveMermaid component for enhanced user interaction

--- a/content/1.mdx
+++ b/content/1.mdx
@@ -16,6 +16,11 @@ nextButtonText: "К функциональным требованиям"
 *   **Техническая задача:** Разработать и внедрить отказоустойчивую, масштабируемую систему на базе микросервисной архитектуры для управления outreach-кампаниями.
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 graph TD
     Root["Цели и задачи Платформы"]
     
@@ -32,6 +37,13 @@ graph TD
 ```
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% tooltip: Эта диаграмма показывает архитектуру системы Influbalance
+%% disable-tooltip: false
 graph TD
     subgraph "Внешние акторы"
         Client["Клиент"]
@@ -56,6 +68,11 @@ graph TD
 *   **Управление проектом:** Agile-фреймворк Scrum. Проект разбивается на 2-недельные спринты с планированием, ежедневными стендапами, демонстрацией и ретроспективой.
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 graph TD
     C1["Level 1: Context<br/>Система, пользователи,<br/>внешние системы"] --> C2["Level 2: Component<br/>Основные модули/<br/>микросервисы"]
     C2 --> C3["Level 3: Chunks<br/>Пользовательские сценарии<br/>и потоки данных"]
@@ -64,6 +81,11 @@ graph TD
 ```
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 graph TD
     A["Бэклог продукта"] --> B{"Планирование спринта"}
     B --> C["Спринт (2 недели) Ежедневные стендапы"]
