--- a/content/2.mdx
+++ b/content/2.mdx
@@ -19,6 +19,11 @@ nextButtonText: "К пользовательским сценариям"
 
 ##### Диаграмма компонентов (C5 - Level 2)
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 graph TD
     subgraph "Юзер-интерфейсы"
         A["Клиентский портал"]
@@ -64,6 +69,11 @@ graph TD
 
 ##### Карта ролей и их ключевых прав
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 graph TD
     Root["Роли пользователей"]
     
@@ -115,6 +125,11 @@ graph TD
 
 ##### Последовательность обработки нового проекта (Sequence Diagram)
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
 sequenceDiagram
     participant Client as Клиент
     participant Portal as Клиентский Портал
