Implement syntax highlighting and optimize code block spacing
- Add rehype-pretty-code and shiki dependencies for syntax highlighting
- Create custom MDX processor with unified pipeline
- Implement compact code block styling with minimal line spacing
- Add syntax highlighting for JavaScript, TypeScript, CSS, Python, SQL, JSON
- Optimize code block padding and margins for better readability
- Fix code block rendering issues and remove syntax artifacts
- Add language indicator badges for code blocks
- Support both light and dark themes for syntax highlighting

--- a/content/2.mdx
+++ b/content/2.mdx
@@ -24,6 +24,7 @@ nextButtonText: "К пользовательским сценариям"
 %% zoom-min: 0.5
 %% zoom-max: 3
 %% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     subgraph "Юзер-интерфейсы"
         A["Клиентский портал"]
@@ -74,6 +75,7 @@ graph TD
 %% zoom-min: 0.5
 %% zoom-max: 3
 %% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     Root["Роли пользователей"]
     
@@ -130,6 +132,7 @@ graph TD
 %% zoom-min: 0.5
 %% zoom-max: 3
 %% zoom-initial: 0.8
+%% disable-tooltip: true
 sequenceDiagram
     participant Client as Клиент
     participant Portal as Клиентский Портал
