--- a/content/5.mdx
+++ b/content/5.mdx
@@ -19,6 +19,12 @@ nextButtonText: "К процедуре приемки"
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 erDiagram
     TENANT ||--|{ CLIENT : "имеет"
     CLIENT ||--|{ PROJECT : "заказывает"
@@ -82,6 +88,12 @@ erDiagram
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 sequenceDiagram
     participant IMAP as "IMAP Listener"
     participant Outreach as "Outreach Service"
