--- a/content/6.mdx
+++ b/content/6.mdx
@@ -13,6 +13,12 @@ nextButtonText: "К заключению и материалам"
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     A[Разработка завершена] --> B{Модульное и<br>Интеграционное тестирование};
     B -- "OK" --> C{Тестирование UI и E2E сценариев};
