--- a/content/7.mdx
+++ b/content/7.mdx
@@ -23,6 +23,12 @@ nextButtonText: ""
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 gantt
     title Дорожная карта Influbalance Core
     dateFormat  YYYY-MM-DD
