--- a/content/4.mdx
+++ b/content/4.mdx
@@ -21,6 +21,12 @@ nextButtonText: "К программным интерфейсам (API)"
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     A[Технологический стек Influbalance] --> B[Frontend]
     A --> C[Backend]
@@ -54,6 +60,12 @@ graph TD
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     subgraph "Интернет"
         User[Клиент / Партнер]
@@ -101,6 +113,12 @@ graph TD
 
 
 ```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
 graph TD
     A(Разработчик делает 'git push') --> B[GitHub Actions];
     subgraph B
