--- a/content/1.mdx
+++ b/content/1.mdx
@@ -1,142 +1,288 @@
 ---
-title: "Введение и цели проекта"
+title: "Примеры стилей MDX"
+description: "Полные примеры всех стилей и форматирования MDX контента"
 icon: "FileText"
-prevButtonText: ""
-nextButtonText: "К функциональным требованиям"
+prevButtonText: "Назад"
+nextButtonText: "Вперед"
 ---
 
-### 1. Общая информация
+# Примеры стилей MDX контента
 
-#### 1.1. Цели и задачи проекта
+Эта страница демонстрирует все доступные стили и форматирование MDX контента, включая код с подсветкой синтаксиса.
 
-*   **Бизнес-цель:** Создать технологическую платформу для продукта Influbalance, которая позволит:
-    1.  Снизить операционные расходы (OPEX) за счет отказа от сторонних сервисов (Instantly.ai).
-    2.  Автоматизировать полный цикл работы с клиентом: от онбординга до получения результата.
-    3.  Обеспечить техническую основу для масштабирования и запуска White-Label решения для партнеров.
-*   **Техническая задача:** Разработать и внедрить отказоустойчивую, масштабируемую систему на базе микросервисной архитектуры для управления outreach-кампаниями.
+## Заголовки всех уровней
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-%% tooltip: Эта диаграмма показывает архитектуру системы Influbalance
-%% disable-tooltip: true
-graph TD
-    Root["Цели и задачи Платформы"]
+### Заголовок третьего уровня
+
+#### Заголовок четвертого уровня
+
+##### Заголовок пятого уровня
+
+###### Заголовок шестого уровня
+
+## Форматирование текста
+
+Это **жирный текст**, а это *курсив*. Также можно использовать ***жирный курсив***.
+
+~~Зачеркнутый текст~~ и <mark>выделенный текст</mark>.
+
+`Встроенный код` в тексте.
+
+## Списки
+
+### Маркированный список
+
+- Первый элемент списка
+- Второй элемент списка
+  - Вложенный элемент
+  - Еще один вложенный элемент
+- Третий элемент списка
+
+### Нумерованный список
+
+1. Первый пункт
+2. Второй пункт
+   1. Вложенный пункт
+   2. Еще один вложенный пункт
+3. Третий пункт
+
+### Маркированный и нумерованный список
+
+*   **Выделение:** Описание:
+    1.  Пункт 1.
+    2.  Пункт 2.
+    3.  Пункт 3.
+*   **Выделение:** Конец.
+
+### Список задач
+
+- [x] Выполненная задача
+- [ ] Невыполненная задача
+- [x] Еще одна выполненная задача
+
+## Цитаты
+
+> Это обычная цитата. Она может содержать несколько строк текста.
+> 
+> И даже несколько абзацев.
+
+> ### Цитата с заголовком
+> 
+> Цитата может содержать заголовки и другое форматирование.
+
+## Код с подсветкой синтаксиса
+
+### JavaScript/TypeScript
+
+```javascript
+// Пример функции на JavaScript
+function greetUser(name, age = 18) {
+  const message = `Привет, ${name}! Тебе ${age} лет.`;
+  console.log(message);
+  return message;
+}
+
+// Использование функции
+const user = {
+  name: "Алексей",
+  age: 25
+};
+
+greetUser(user.name, user.age);
+```
+
+### React компонент
+
+```tsx
+import React, { useState, useEffect } from 'react';
+
+interface UserProps {
+  name: string;
+  age: number;
+}
+
+const UserCard: React.FC<UserProps> = ({ name, age }) => {
+  const [isActive, setIsActive] = useState(false);
+
+  useEffect(() => {
+    console.log(`Пользователь ${name} загружен`);
+  }, [name]);
+
+  return (
+    <div className={`user-card ${isActive ? 'active' : ''}`}>
+      <h3>{name}</h3>
+      <p>Возраст: {age}</p>
+      <button onClick={() => setIsActive(!isActive)}>
+        {isActive ? 'Деактивировать' : 'Активировать'}
+      </button>
+    </div>
+  );
+};
+
+export default UserCard;
+```
+
+### CSS стили
+
+```css
+/* Пример CSS стилей */
+.user-card {
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.user-card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.user-card.active {
+  background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+}
+
+@media (max-width: 768px) {
+  .user-card {
+    padding: 15px;
+    margin: 10px;
+  }
+}
+```
+
+### Python код
+
+```python
+# Пример Python скрипта
+import asyncio
+import aiohttp
+from typing import List, Dict, Optional
+
+class DataProcessor:
+    def __init__(self, api_url: str):
+        self.api_url = api_url
+        self.session: Optional[aiohttp.ClientSession] = None
     
-    Root --> Business["Бизнес-цели"]
-    Root --> Technical["Техническая задача"]
+    async def __aenter__(self):
+        self.session = aiohttp.ClientSession()
+        return self
     
-    Business --> B1["Снижение OPEX (отказ от Instantly.ai)"]
-    Business --> B2["Полная автоматизация клиентского пути"]
-    Business --> B3["Масштабирование через White-Label"]
+    async def __aexit__(self, exc_type, exc_val, exc_tb):
+        if self.session:
+            await self.session.close()
     
-    Technical --> T1["Отказоустойчивая система"]
-    Technical --> T2["Микросервисная архитектура"]
-    Technical --> T3["Контроль над данными и процессами"]
+    async def fetch_data(self, endpoint: str) -> Dict:
+        """Получить данные с API"""
+        async with self.session.get(f"{self.api_url}/{endpoint}") as response:
+            return await response.json()
+    
+    async def process_users(self, user_ids: List[int]) -> List[Dict]:
+        """Обработать список пользователей"""
+        tasks = [self.fetch_data(f"users/{user_id}") for user_id in user_ids]
+        results = await asyncio.gather(*tasks)
+        return [user for user in results if user.get('active', False)]
+
+# Использование
+async def main():
+    async with DataProcessor("https://api.example.com") as processor:
+        users = await processor.process_users([1, 2, 3, 4, 5])
+        print(f"Найдено {len(users)} активных пользователей")
+
+if __name__ == "__main__":
+    asyncio.run(main())
 ```
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-%% disable-tooltip: true
-graph TD
-    subgraph "Внешние акторы"
-        Client["Клиент"]
-        Admin["Администратор/Партнер"]
-    end
-    subgraph "Система Influbalance Core"
-        WebApp["Клиентский портал (Next.js)"]
-        Core["Ядро системы (Payload CMS + PostgreSQL)"]
-        Services["Микросервисы (Рассылки, AI, Парсинг)"]
-    end
-    Client -- "1. Создает Проект" --> WebApp
-    WebApp -- "2. Передает данные в" --> Core
-    Admin -- "Управляет через" --> Core
-    Core -- "3. Оркестрирует задачи для" --> Services
-    Services -- "4. Выполняют и возвращают результат в" --> Core
+### SQL запросы
+
+```sql
+-- Пример SQL запросов
+SELECT 
+    u.id,
+    u.name,
+    u.email,
+    COUNT(o.id) as order_count,
+    SUM(o.total_amount) as total_spent
+FROM users u
+LEFT JOIN orders o ON u.id = o.user_id
+WHERE u.created_at >= '2024-01-01'
+    AND u.status = 'active'
+GROUP BY u.id, u.name, u.email
+HAVING COUNT(o.id) > 0
+ORDER BY total_spent DESC
+LIMIT 10;
+
+-- Создание индекса для оптимизации
+CREATE INDEX idx_users_created_status 
+ON users(created_at, status);
+
+-- Обновление данных
+UPDATE users 
+SET last_login = NOW(), 
+    login_count = login_count + 1
+WHERE id = ?;
 ```
 
-#### 1.2. Используемые методологии
+## Таблицы
 
-*   **Проектирование архитектуры:** Модель C5 (Context, Component, Chunks, Crumbs, Core) будет использоваться для визуализации и документирования архитектуры на разных уровнях абстракции. Диаграммы будут создаваться с использованием Mermaid для реализации подхода Architecture-as-Code.
-*   **Разработка интерфейса:** Методология Atomic Design для создания консистентной и переиспользуемой библиотеки UI-компонентов.
-*   **Управление проектом:** Agile-фреймворк Scrum. Проект разбивается на 2-недельные спринты с планированием, ежедневными стендапами, демонстрацией и ретроспективой.
+| Название | Описание | Статус | Дата |
+|----------|----------|--------|------|
+| Проект A | Веб-приложение | ✅ Активен | 2024-01-15 |
+| Проект B | Мобильное приложение | 🚧 В разработке | 2024-02-01 |
+| Проект C | API сервис | ❌ Завершен | 2024-01-30 |
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-%% disable-tooltip: true
-graph TD
-    C1["Level 1: Context<br/>Система, пользователи,<br/>внешние системы"] --> C2["Level 2: Component<br/>Основные модули/<br/>микросервисы"]
-    C2 --> C3["Level 3: Chunks<br/>Пользовательские сценарии<br/>и потоки данных"]
-    C3 --> C4["Level 4: Crumbs<br/>Схемы и модели данных,<br/>ERD"]
-    C4 --> C5["Level 5: Core<br/>Декомпозиция до кода<br/>и UI-компонентов"]
-```
+### Таблица с выравниванием
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-%% disable-tooltip: true
-graph TD
-    A["Бэклог продукта"] --> B{"Планирование спринта"}
-    B --> C["Спринт (2 недели) Ежедневные стендапы"]
-    C --> D{"Демонстрация результата Заказчику"}
-    D --> E{"Ретроспектива команды"}
-    E --> A
-```
+| Левый | Центр | Правый |
+|:------|:-----:|-------:|
+| Текст слева | Текст по центру | Текст справа |
+| Еще текст | Еще текст | Еще текст |
 
-#### 1.3. Глоссарий
+## Ссылки и изображения
 
-*   **Клиент:** Конечный заказчик, который покупает услугу (бренд, стартап).
-*   **Партнер (Тенант):** Агентство или фрилансер, использующий платформу по модели White-Label.
-*   **Проект:** Заказ клиента, созданный через квиз. Включает в себя цели (например, 15 позитивных ответов), критерии подбора и бюджет.
-*   **Кампания:** Конкретная outreach-активность в рамках Проекта, нацеленная на определенный сегмент инфлюенсеров.
-*   **Позитивный ответ:** Ответ от инфлюенсера, классифицированный системой как явное выражение заинтересованности в сотрудничестве.
+### Ссылки
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-%% disable-tooltip: true
-erDiagram
-    ПАРТНЕР ||--|{ КЛИЕНТ : "управляет ."
-    КЛИЕНТ ||--|{ ПРОЕКТ : "создает ."
-    ПРОЕКТ ||--|{ КАМПАНИЯ : "состоит из ."
+- [Официальный сайт Next.js](https://nextjs.org/)
+- [Документация MDX](https://mdxjs.com/)
+- [Tailwind CSS](https://tailwindcss.com/)
 
-    ПАРТНЕР {
-        int tenant_id PK
-        string name
-        json branding_settings
-    }
-    КЛИЕНТ {
-        int client_id PK
-        string name
-        string email
-        int tenant_id FK
-    }
-    ПРОЕКТ {
-        int project_id PK
-        string status
-        int target_replies
-        int client_id FK
-    }
-    КАМПАНИЯ {
-        int campaign_id PK
-        string status
-        int project_id FK
-    }
-```
+### Изображения
+
+![Логотип Next.js](https://nextjs.org/static/blog/next-13/twitter-card.png)
+
+## Горизонтальная линия
+
+---
+
+## Математические формулы (если поддерживается)
+
+Встроенная формула: $E = mc^2$
+
+Блочная формула:
+
+$$
+\int_{-\infty}^{\infty} e^{-x^2} dx = \sqrt{\pi}
+$$
+
+## Эмодзи и символы
+
+🎉 🚀 💻 ⚡ 🔥 📱 🎨 🌟 ✨ 🎯
+
+## Специальные символы
+
+- `&lt;` для <
+- `&gt;` для >
+- `&amp;` для &
+- `&quot;` для "
+- `&apos;` для '
+
+## HTML элементы
+
+<div style="background: linear-gradient(45deg, #ff6b6b, #4ecdc4); padding: 20px; border-radius: 10px; color: white; text-align: center;">
+  <h3>Кастомный HTML блок</h3>
+  <p>Это пример использования HTML в MDX</p>
+</div>
+
+## Заключение
+
+Этот файл демонстрирует все основные возможности форматирования MDX контента. Все стили должны корректно отображаться с подсветкой синтаксиса для кода.
