--- a/content/1.mdx
+++ b/content/1.mdx
@@ -1,133 +1,341 @@
 ---
-title: "Введение и цели проекта"
+title: "Примеры стилей MDX"
+description: "Полные примеры всех стилей и форматирования MDX контента"
 icon: "FileText"
-prevButtonText: ""
-nextButtonText: "К функциональным требованиям"
+prevButtonText: "Назад"
+nextButtonText: "Вперед"
 ---
 
-### 1. Общая информация
+# Примеры стилей MDX контента
 
-#### 1.1. Цели и задачи проекта
+Эта страница демонстрирует все доступные стили и форматирование MDX контента, включая код с подсветкой синтаксиса.
 
-*   **Бизнес-цель:** Создать технологическую платформу для продукта Influbalance, которая позволит:
-    1.  Снизить операционные расходы (OPEX) за счет отказа от сторонних сервисов (Instantly.ai).
-    2.  Автоматизировать полный цикл работы с клиентом: от онбординга до получения результата.
-    3.  Обеспечить техническую основу для масштабирования и запуска White-Label решения для партнеров.
-*   **Техническая задача:** Разработать и внедрить отказоустойчивую, масштабируемую систему на базе микросервисной архитектуры для управления outreach-кампаниями.
+## Заголовки всех уровней
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-graph TD
-    Root["Цели и задачи Платформы"]
-    
-    Root --> Business["Бизнес-цели"]
-    Root --> Technical["Техническая задача"]
-    
-    Business --> B1["Снижение OPEX (отказ от Instantly.ai)"]
-    Business --> B2["Полная автоматизация клиентского пути"]
-    Business --> B3["Масштабирование через White-Label"]
-    
-    Technical --> T1["Отказоустойчивая система"]
-    Technical --> T2["Микросервисная архитектура"]
-    Technical --> T3["Контроль над данными и процессами"]
+### Заголовок третьего уровня
+
+#### Заголовок четвертого уровня
+
+##### Заголовок пятого уровня
+
+###### Заголовок шестого уровня
+
+## Форматирование текста
+
+Это **жирный текст**, а это *курсив*. Также можно использовать ***жирный курсив***.
+
+~~Зачеркнутый текст~~ и <mark>выделенный текст</mark>.
+
+`Встроенный код` в тексте.
+
+## Списки
+
+### Маркированный список
+
+- Первый элемент списка
+- Второй элемент списка
+  - Вложенный элемент
+  - Еще один вложенный элемент
+- Третий элемент списка
+
+### Нумерованный список
+
+1. Первый пункт
+2. Второй пункт
+   1. Вложенный пункт
+   2. Еще один вложенный пункт
+3. Третий пункт
+
+### Маркированный и нумерованный список
+
+*   **Выделение:** Описание:
+    1.  Пункт 1.
+    2.  Пункт 2.
+    3.  Пункт 3.
+*   **Выделение:** Конец.
+
+### Список задач
+
+- [x] Выполненная задача
+- [ ] Невыполненная задача
+- [x] Еще одна выполненная задача
+
+## Цитаты
+
+> Это обычная цитата. Она может содержать несколько строк текста.
+> 
+> И даже несколько абзацев.
+
+> ### Цитата с заголовком
+> 
+> Цитата может содержать заголовки и другое форматирование.
+
+## Код с подсветкой синтаксиса
+
+### JavaScript/TypeScript
+
+```javascript
+// Пример функции на JavaScript
+function greetUser(name, age = 18) {
+  const message = `Привет, ${name}! Тебе ${age} лет.`;
+  console.log(message);
+  return message;
+}
+
+// Использование функции
+const user = {
+  name: "Алексей",
+  age: 25
+};
+
+greetUser(user.name, user.age);
 ```
 
+### React компонент
+
+```tsx
+import React, { useState, useEffect } from 'react';
+
+interface UserProps {
+  name: string;
+  age: number;
+}
+
+const UserCard: React.FC<UserProps> = ({ name, age }) => {
+  const [isActive, setIsActive] = useState(false);
+
+  useEffect(() => {
+    console.log(`Пользователь ${name} загружен`);
+  }, [name]);
+
+  return (
+    <div className={`user-card ${isActive ? 'active' : ''}`}>
+      <h3>{name}</h3>
+      <p>Возраст: {age}</p>
+      <button onClick={() => setIsActive(!isActive)}>
+        {isActive ? 'Деактивировать' : 'Активировать'}
+      </button>
+    </div>
+  );
+};
+
+export default UserCard;
+```
+
+### CSS стили
+
+```css
+/* Пример CSS стилей */
+.user-card {
+  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.user-card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+}
+
+.user-card.active {
+  background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+}
+
+@media (max-width: 768px) {
+  .user-card {
+    padding: 15px;
+    margin: 10px;
+  }
+}
+```
+
+## Таблицы
+
+| Название | Описание | Статус | Дата |
+|----------|----------|--------|------|
+| Проект A | Веб-приложение | ✅ Активен | 2024-01-15 |
+| Проект B | Мобильное приложение | 🚧 В разработке | 2024-02-01 |
+| Проект C | API сервис | ❌ Завершен | 2024-01-30 |
+
+### Таблица с выравниванием
+
+| Левый | Центр | Правый |
+|:------|:-----:|-------:|
+| Текст слева | Текст по центру | Текст справа |
+| Еще текст | Еще текст | Еще текст |
+
+## Ссылки и изображения
+
+### Ссылки
+
+- [Официальный сайт Next.js](https://nextjs.org/)
+- [Документация MDX](https://mdxjs.com/)
+- [Tailwind CSS](https://tailwindcss.com/)
+
+### Изображения
+
+![Логотип Next.js](https://nextjs.org/static/blog/next-13/twitter-card.png)
+
+## Горизонтальная линия
+
+---
+
+
+## Эмодзи и символы
+
+🎉 🚀 💻 ⚡ 🔥 📱 🎨 🌟 ✨ 🎯
+
+## Специальные символы
+
+- `<` для меньше
+- `>` для больше
+- `&` для амперсанда
+- `"` для кавычек
+- `'` для апострофа
+
+## Mermaid диаграммы
+
+### Блок-схема процесса
+
 ```mermaid
 %% zoom: true
 %% height: 60vh
 %% zoom-min: 0.5
 %% zoom-max: 3
 %% zoom-initial: 0.8
-%% tooltip: Эта диаграмма показывает архитектуру системы Influbalance
-%% disable-tooltip: false
-graph TD
-    subgraph "Внешние акторы"
-        Client["Клиент"]
-        Admin["Администратор/Партнер"]
+%% tooltip: Эта диаграмма показывает архитектуру системы Probo
+flowchart TD
+    A[Начало] --> B{Проверка условий}
+    B -->|Да| C[Выполнить действие]
+    B -->|Нет| D[Пропустить]
+    C --> E[Обновить данные]
+    D --> E
+    E --> F{Есть еще задачи?}
+    F -->|Да| B
+    F -->|Нет| G[Завершение]
+```
+
+### Диаграмма последовательности
+
+```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
+sequenceDiagram
+    participant U as Пользователь
+    participant F as Frontend
+    participant B as Backend
+    participant D as База данных
+
+    U->>F: Запрос данных
+    F->>B: API вызов
+    B->>D: SQL запрос
+    D-->>B: Результат
+    B-->>F: JSON ответ
+    F-->>U: Отображение данных
+```
+
+### Диаграмма классов
+
+```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
+classDiagram
+    class User {
+        +String name
+        +String email
+        +Date createdAt
+        +login()
+        +logout()
+        +updateProfile()
+    }
+    
+    class Order {
+        +String id
+        +Number amount
+        +Date orderDate
+        +createOrder()
+        +cancelOrder()
+    }
+    
+    class Product {
+        +String name
+        +Number price
+        +String description
+        +updatePrice()
+    }
+```
+
+### Диаграмма состояния
+
+```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
+stateDiagram-v2
+    [*] --> Draft
+    Draft --> Review : submit
+    Review --> Approved : approve
+    Review --> Rejected : reject
+    Approved --> Published : publish
+    Rejected --> Draft : revise
+    Published --> [*]
+```
+
+### Диаграмма развертывания
+
+```mermaid
+%% zoom: true
+%% height: 60vh
+%% zoom-min: 0.5
+%% zoom-max: 3
+%% zoom-initial: 0.8
+%% disable-tooltip: true
+graph TB
+    subgraph "Frontend"
+        A[Next.js App]
+        B[Vercel CDN]
     end
-    subgraph "Система Influbalance Core"
-        WebApp["Клиентский портал (Next.js)"]
-        Core["Ядро системы (Payload CMS + PostgreSQL)"]
-        Services["Микросервисы (Рассылки, AI, Парсинг)"]
+    
+    subgraph "Backend Services"
+        C[API Gateway]
+        D[Auth Service]
+        E[Data Service]
     end
-    Client -- "1. Создает Проект" --> WebApp
-    WebApp -- "2. Передает данные в" --> Core
-    Admin -- "Управляет через" --> Core
-    Core -- "3. Оркестрирует задачи для" --> Services
-    Services -- "4. Выполняют и возвращают результат в" --> Core
+    
+    subgraph "Database"
+        F[(PostgreSQL)]
+        G[(Redis Cache)]
+    end
+    
+    A --> B
+    B --> C
+    C --> D
+    C --> E
+    D --> F
+    E --> F
+    E --> G
 ```
 
-#### 1.2. Используемые методологии
+## HTML элементы
 
-*   **Проектирование архитектуры:** Модель C5 (Context, Component, Chunks, Crumbs, Core) будет использоваться для визуализации и документирования архитектуры на разных уровнях абстракции. Диаграммы будут создаваться с использованием Mermaid для реализации подхода Architecture-as-Code.
-*   **Разработка интерфейса:** Методология Atomic Design для создания консистентной и переиспользуемой библиотеки UI-компонентов.
-*   **Управление проектом:** Agile-фреймворк Scrum. Проект разбивается на 2-недельные спринты с планированием, ежедневными стендапами, демонстрацией и ретроспективой.
+<div style="background: linear-gradient(45deg, #ff6b6b, #4ecdc4); padding: 20px; border-radius: 10px; color: white; text-align: center;">
+  <h3>Кастомный HTML блок</h3>
+  <p>Это пример использования HTML в MDX</p>
+</div>
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-graph TD
-    C1["Level 1: Context<br/>Система, пользователи,<br/>внешние системы"] --> C2["Level 2: Component<br/>Основные модули/<br/>микросервисы"]
-    C2 --> C3["Level 3: Chunks<br/>Пользовательские сценарии<br/>и потоки данных"]
-    C3 --> C4["Level 4: Crumbs<br/>Схемы и модели данных,<br/>ERD"]
-    C4 --> C5["Level 5: Core<br/>Декомпозиция до кода<br/>и UI-компонентов"]
-```
+## Заключение
 
-```mermaid
-%% zoom: true
-%% height: 60vh
-%% zoom-min: 0.5
-%% zoom-max: 3
-%% zoom-initial: 0.8
-graph TD
-    A["Бэклог продукта"] --> B{"Планирование спринта"}
-    B --> C["Спринт (2 недели) Ежедневные стендапы"]
-    C --> D{"Демонстрация результата Заказчику"}
-    D --> E{"Ретроспектива команды"}
-    E --> A
-```
-
-#### 1.3. Глоссарий
-
-*   **Клиент:** Конечный заказчик, который покупает услугу (бренд, стартап).
-*   **Партнер (Тенант):** Агентство или фрилансер, использующий платформу по модели White-Label.
-*   **Проект:** Заказ клиента, созданный через квиз. Включает в себя цели (например, 15 позитивных ответов), критерии подбора и бюджет.
-*   **Кампания:** Конкретная outreach-активность в рамках Проекта, нацеленная на определенный сегмент инфлюенсеров.
-*   **Позитивный ответ:** Ответ от инфлюенсера, классифицированный системой как явное выражение заинтересованности в сотрудничестве.
-
-```mermaid
-erDiagram
-    ПАРТНЕР ||--|{ КЛИЕНТ : "управляет ."
-    КЛИЕНТ ||--|{ ПРОЕКТ : "создает ."
-    ПРОЕКТ ||--|{ КАМПАНИЯ : "состоит из ."
-
-    ПАРТНЕР {
-        int tenant_id PK
-        string name
-        json branding_settings
-    }
-    КЛИЕНТ {
-        int client_id PK
-        string name
-        string email
-        int tenant_id FK
-    }
-    ПРОЕКТ {
-        int project_id PK
-        string status
-        int target_replies
-        int client_id FK
-    }
-    КАМПАНИЯ {
-        int campaign_id PK
-        string status
-        int project_id FK
-    }
-```
+Этот файл демонстрирует все основные возможности форматирования MDX контента. Все стили должны корректно отображаться с подсветкой синтаксиса для кода.
